# rust-service

./: .env  Cargo.toml
src/: endpoints.rs  main.rs  schema.rs
