[package]
name = "beg-rust-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
env_logger = "0.9.0"
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_codegen = "0.16.0"
